# one-line-llm-tuner

./: .gitignore  Contributing.md  LICENSE.txt  README.md  setup.cfg
src/: __init__.py  dataset_loader.py  file_reader.py  llm_tuner.py  text_file_builder.py
src/one_line_llm_tuner/builder/: text_file_builder.py
src/one_line_llm_tuner/dataset/: dataset_loader.py
src/one_line_llm_tuner/reader/: file_reader.py
src/one_line_llm_tuner/tuner/: llm_tuner.py
