[metadata]
name = one-line-llm-tuner
version = 0.0.1
author = Suhas Bhairav
author_email = info@metriccoders.com
description = A Large Language Model Fine-tuning package. The package uses a single line to fine-tune an LLM by taking care of all the boilerplate in the backend.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/metriccoders/one-line-llm-tuner
project_urls =
    Bug Tracker = https://github.com/metriccoders/one-line-llm-tuner/issues
    repository = https://github.com/metriccoders/one-line-llm-tuner
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src