[metadata]
name = one-line-llm-tuner
version = 0.0.11
author = Suhas Bhairav
author_email = info@metriccoders.com
description = A Large Language Model Fine-tuning package. The package uses a single line to fine-tune an LLM by taking care of all the boilerplate in the backend.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = file: LICENSE.txt
url = https://github.com/metriccoders/one-line-llm-tuner
project_urls =
    Bug Tracker = https://github.com/metriccoders/one-line-llm-tuner/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    scikit-learn>=0.24.0
    transformers>=4.0.0
python_requires = >=3.10

[options.package_data]
* = README.md, LICENSE.txt

[options.packages.find]
where = src